go/src/deployments/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stockpricedemo
  namespace: stockpricedemo
spec:
  ports:
    - name: http
#      nodePort: 30000
      port: 9090
      protocol: TCP
      targetPort: 9090
  type: ClusterIP
#  type: NodePort
  selector:
    app: stockpricedemo
