go/src/deployments/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockpricedemo
  namespace: stockpricedemo
spec:
  defaultBackend:
    service:
      name: stockpricedemo
      port:
        number: 9090
#  rules:
#    - http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: stockpricedemo
#                port:
#                  number: 9090
